--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       {{test}}
     </div>
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
-      {{post.title}} - {{post.upvotes}} upvotes 
+      {{post.title}} - {{post.upvotes}} upvotes
+      <span ng-click="incrementUpvotes(post)">^</span>
     </div>
     <form ng-submit="addPost()">
       <input type="text" ng-model="title"></input>
