--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
       {{test}}
     </div>
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
-      {{post.title}} - {{post.upvotes}} upvotes
+      <a ng-show="post.link" href="{{post.link}}">
+        {{post.title}}
+      </a>
+      <span ng-hide="post.link">
+      {{post.title}}
+      </span> 
+      - {{post.upvotes}} upvotes
       <span ng-click="incrementUpvotes(post)">^</span>
+      <br>
     </div>
     <form ng-submit="addPost()">
       <input type="text" ng-model="title"></input>
+      <input type="text" placeholder="Link" ng-model="link"></input>
       <button type="submit">Post</button>
     </form>
   </body>
